--- a/composerApp/composer.json
+++ b/composerApp/composer.json
@@ -8,5 +8,8 @@
     ],
     "require": {
         "monolog/monolog": "^1.22"
+    },
+    "autoload": {
+        "psr-4": {"Greeting\\": "source/Greeting/"}
     }
 }
